2a tentativa de conserto da exibição de imagens no notebook

--- a/Week4-1_Notas-Parte1.ipynb
+++ b/Week4-1_Notas-Parte1.ipynb
@@ -40,7 +40,7 @@
     "\n",
     "Algumas das imagens da base de dados \"humanos ou cavalos\":\n",
     "\n",
-    "<img src=\"https://storage.googleapis.com/tfds-data/visualization/fig/horses_or_humans-3.0.0.png\" width=\"500\" />\n"
+    "<img src=\"https://storage.googleapis.com/tfds-data/visualization/fig/horses_or_humans-3.0.0.png\" width=\"500\" />"
    ]
   },
   {
@@ -1483,7 +1483,7 @@
     "\n",
     "| | | |\n",
     "|---|---|---| \n",
-    "|<img src=\"https://cdn.pixabay.com/photo/2016/01/14/00/26/horse-1139142_1280.jpg\" width=\"400\" />|<img src=\"https://cdn.pixabay.com/photo/2023/12/27/22/23/horse-8472924_1280.jpg\" width=\"400\" />|<img src=\"https://cdn.pixabay.com/photo/2016/01/12/16/51/white-horse-1136093_1280.jpg\" width=\"400\" />|\n",
+    "|<img src=\"data\\testes para horse-or-human\\horse-1139142_1280.jpg\" width=\"400\" />|<img src=\"data\\testes para horse-or-human\\horse-8472924_1280.jpg\" width=\"400\" />|<img src=\"data\\testes para horse-or-human\\white-horse-1136093_1280.jpg\" width=\"400\" />|\n",
     "\n",
     "Até mesmo com algumas imagens do dataset de validação, nas quais os cavalos estão numa posição mais de frente para a câmera, é apresentado este erro na classificação.\n",
     "\n",
@@ -1495,7 +1495,7 @@
     "\n",
     "Além disso, a imagem do anjo (abaixo) também foi erroneamente classificada como cavalo. Ao analisarmos o conjunto de dados de treinamento é possível correlacionar este erro com o fato de não termos imagens parecidas nos exemplos de humanos, e que nas imagens de cavalos, há uma grande quantidade de imagens de cavalos brancos correndo na grama. Assim, a cor branca e a grama podem estar sendo relacionadas pelo modelo à classe de cavalos.\n",
     "\n",
-    "<img src=\"https://cdn.pixabay.com/photo/2015/05/02/08/02/angel-749625_1280.jpg\" width=\"400\" />"
+    "<img src=\"data\\testes para horse-or-human\\angel-749625_1280.jpg\" width=\"400\" />"
    ]
   },
   {
