Consertando a exibição de imagens nos notebooks da 4a semana

--- a/Week4-1_Notas-Parte2.ipynb
+++ b/Week4-1_Notas-Parte2.ipynb
@@ -1065,11 +1065,11 @@
     "\n",
     "No caso dos atuais erros, não foi encontrado um padrão pelo qual se possa justificar o erro. Podemos apenas expor as imagens que apresentaram erros de classificação:\n",
     "\n",
-    "<img src=\"https://cdn.pixabay.com/photo/2018/10/29/21/46/human-3782189_1280.jpg\" width=\"500\"></img>\n",
+    "<img src=\"data\\testes para horse-or-human\\human-3782189_1280.jpg\" width=\"400\"></img>\n",
     "\n",
-    "<img src=\"https://cdn.pixabay.com/photo/2016/01/12/16/51/white-horse-1136093_1280.jpg\" width=\"500\"></img>\n",
+    "<img src=\"data\\testes para horse-or-human\\white-horse-1136093_1280.jpg\" width=\"400\"></img>\n",
     "\n",
-    "<img src=\"https://cdn.pixabay.com/photo/2016/11/29/11/24/woman-1869158_1280.jpg\" width=\"500\"></img>"
+    "<img src=\"data\\testes para horse-or-human\\woman-1869158_1280.jpg\" width=\"400\"></img>"
    ]
   },
   {
