--- a/Week4-1_Notas-Parte3.ipynb
+++ b/Week4-1_Notas-Parte3.ipynb
@@ -896,15 +896,15 @@
     "\n",
     "Neste modelo, apenas nosso cavalo que foi erroneamente classificado em todos outros modelos manteve o erro.\n",
     "\n",
-    "<img src=\"https://cdn.pixabay.com/photo/2016/01/12/16/51/white-horse-1136093_1280.jpg\" width=\"500\"></img>\n",
+    "<img src=\"data\\testes para horse-or-human\\white-horse-1136093_1280.jpg\" width=\"400\"></img>\n",
     "\n",
     "Já no Jupyter, tivemos o anjo sendo incorretamente classificado para todos os modelos, assim como o cavalo acima. Ainda, algumas das outras imagens incorretamente classificadas:\n",
     "\n",
-    "<img src=\"https://cdn.pixabay.com/photo/2014/12/08/17/52/horse-561221_1280.jpg\" width=\"500\"></img>\n",
+    "<img src=\"data\\testes para horse-or-human\\horse-561221_1280.jpg\" width=\"400\"></img>\n",
     "\n",
-    "<img src=\"https://cdn.pixabay.com/photo/2021/01/25/11/29/woman-5948094_1280.jpg\" width=\"500\"></img>\n",
+    "<img src=\"data\\testes para horse-or-human\\woman-5948094_1280.jpg\" width=\"400\"></img>\n",
     "\n",
-    "<img src=\"https://cdn.pixabay.com/photo/2015/05/02/08/02/angel-749625_1280.jpg\" width=\"500\"></img>\n"
+    "<img src=\"data\\testes para horse-or-human\\angel-749625_1280.jpg\" width=\"400\"></img>\n"
    ]
   },
   {
